# Flavor-Bridge-Engine

./: .gitignore  README.md  pyproject.toml  wrangler.toml
.github/workflows/: deploy.yml
backend/: requests.http  wrangler.toml
backend/src/: entry.py
backend/src/data/: __init__.py  ingredients.py
backend/src/docs/: __init__.py  openapi.py
backend/src/prompts/: __init__.py  explain.py
backend/src/routes/: __init__.py  docs.py  explain.py  health.py  search.py  seed.py
backend/src/services/: __init__.py  ai_service.py  cache_service.py  ingredient_service.py  vectorize_service.py
backend/src/utils/: __init__.py  helpers.py  rate_limit.py
backend/tests/e2e/: start.sh  test_api.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: FlavorSearch.tsx  SuggestionBubbles.tsx  Toast.tsx
frontend/src/lib/: api.ts
src/: entry.py
src/data/: ingredients.py
src/routes/: __init__.py
src/services/: __init__.py  vectorize_service.py
